--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,19 +1,14 @@
 ---
-import Layout from "../layouts/Layout.astro";
 import Navigation from "../components/Navigation.astro";
-import Footer from "../components/Footer.astro";
 ---
 
 <Navigation/>
-<Layout title="The Will Gleason Citizen Library">
-  <main>
-    <h1><span class="text-gradient">The Will Gleason Citizen Library</span></h1>
-    <p class="instructions">
-		  Test
-    </p>
-  </main>
-  <Footer/>
-</Layout>
+<main>
+  <h1>The Will Gleason Library</h1>
+  <p class="instructions">Testing, testing</p>
+  <p>Thank you for attending</p>
+  <p>whoa</p>
+</main>
 
 <style>
   main {
