--- a/src/pages/bressuire_blog.astro
+++ b/src/pages/bressuire_blog.astro
@@ -5,8 +5,8 @@ import Navigation from "../components/Navigation.astro";
 <main>
   <div>bressuire</div>
   <uL>
-    <li><a href="/posts/post-1/">Post 1</a></li>
-    <li><a href="/posts/post-2/">Post 2</a></li>
-    <li><a href="/posts/post-3/">Post 3</a></li>
+    <li><a href="/posts/bressuire/post-1/">Post 1</a></li>
+    <li><a href="/posts/bressuire/post-2/">Post 2</a></li>
+    <li><a href="/posts/bressuire/post-3/">Post 3</a></li>
   </uL>
 </main>
