--- a/src/pages/bressuire_blog.astro
+++ b/src/pages/bressuire_blog.astro
@@ -8,5 +8,6 @@ import Navigation from "../components/Navigation.astro";
     <li><a href="/posts/bressuire/post-1/">Post 1</a></li>
     <li><a href="/posts/bressuire/post-2/">Post 2</a></li>
     <li><a href="/posts/bressuire/post-3/">Post 3</a></li>
+    <li><a href="/posts/bressuire/post-4/">Post 4</a></li>
   </uL>
 </main>
