--- a/src/pages/poitiers_blog.astro
+++ b/src/pages/poitiers_blog.astro
@@ -5,4 +5,14 @@ import Navigation from "../components/Navigation.astro";
 <Navigation />
 <main>
   <div>Poitiers</div>
+  <ul>
+    <li><a href="/posts/poitiers/post-1">On Iceland, trains, lightsabers, Poitiers, and other things</a> </li>
+    <li><a href="/posts/poitiers/post-2">The second post</a></li>
+    <li><a href="/posts/poitiers/post-3">The third post</a></li>
+    <li><a href="/posts/poitiers/post-4">The fourth post</a></li>
+    <li><a href="/posts/poitiers/post-5">The fifth post</a></li>
+    <li><a href="/posts/poitiers/post-6">The sixth post</a></li>
+    <li><a href="/posts/poitiers/post-7">The seventh post</a></li>
+    <li><a href="/posts/poitiers/post-8">The eighth post</a></li>
+  </ul>
 </main>
