--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,17 @@
 ---
-
 ---
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/bressuire_blog/">Bressuire Blog</a>
-<a href="/poitiers_blog/">Poitiers Blog</a>
+
+<div class='flex justify-between p-20'>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/bressuire_blog/">Bressuire Blog</a>
+  <a href="/poitiers_blog/">Poitiers Blog</a>
+</div>
+
+<style>
+    a {
+        font-size: 1rem;
+        border: solid;
+        padding: 10px;
+    }
+</style>
