--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ const { pageTitle } = Astro.props;
     </head>
     <body>
         <Navigation />
-        <h1>{pageTitle}</h1>
+        <h1 class='text-center'>{pageTitle}</h1>
         <slot />
         <Footer />
     </body>
