--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,14 +1,17 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
+import TextBody from "../components/TextBody.astro";
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
+  <div class="flex flex-col justify-center align-center text-center">
     <p>{frontmatter.pubDate.slice(0, 10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by: {frontmatter.author}</p>
     <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
-    <div>
-        <slot />
-    </div>
+  </div>
+  <TextBody>
+    <slot />
+  </TextBody>
 </BaseLayout>
