--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,10 @@
 ---
+import TextBody from "../components/TextBody.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout pageTitle='Will Gleason Citizen Library'>
+    <TextBody>
+        Hello
+    </TextBody>
 </BaseLayout>
