--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<div class='flex justify-between p-20'>
+<div class='flex justify-between p-10 gap-10 flex-wrap'>
   <a href="/">Home</a>
   <a href="/about/">About</a>
   <a href="/bressuire_blog/">Bressuire Blog</a>
