--- a/src/components/TextBody.astro
+++ b/src/components/TextBody.astro
@@ -1,6 +1,6 @@
 ---
 ---
 
-<div class='text-justify m-20 text-2xl leading-10'>
+<div class='text-justify text-2xl leading-10 m-5 md:m-20'>
     <slot/>
 </div>
