--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import TextBody from "../components/TextBody.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout pageTitle='Will Gleason Citizen Library'>
+<BaseLayout pageTitle='Wlogs Remastered: Anniversary Edition'>
     <TextBody>
         Hello
     </TextBody>
