--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,17 +1,9 @@
 ---
 ---
 
-<div class='flex justify-between p-10 gap-10 flex-wrap'>
+<div class='flex flex-col md:flex-row lg:flex-row justify-between p-10 flex-wrap bg-green-200 text-2xl '>
   <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/bressuire_blog/">Bressuire Blog</a>
-  <a href="/poitiers_blog/">Poitiers Blog</a>
+  <a href="/development_blog">Engineering</a>
+  <a href="/bressuire_blog/">Teaching</a>
+  <a href="/poitiers_blog/">Studying</a>
 </div>
-
-<style>
-    a {
-        font-size: 1rem;
-        border: solid;
-        padding: 10px;
-    }
-</style>
