formatting, content additions, home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,24 @@ import TextBody from "../components/TextBody.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout pageTitle='Wlogs Remastered: Anniversary Edition'>
+<BaseLayout pageTitle="Hello there!">
     <TextBody>
-        Hello
+        I'm Will Gleason, a full-stack developer in charge of two sites: the Gallica
+        Grapher, a digital humanities tool, and the Battle Point Pickleball
+        Monitor, a weather and court monitoring page for my local club.
+        <br />
+        <br />
+        I currently write my APIs in Python or Go, my user interfaces in React and
+        Typescript. I persist my data with Postgres. I have tried GraphQL for API
+        data validation, but I think it's excessive for my current needs. I have
+        started using either tRPC or Python's marvelous FastAPI. For static projects,
+        such as this website, Astro.js is my favorite tool.
+        <br />
+        <br />
+        A developer I appreciate lists only an apple cider recipe on their website.
+        Because I need a job, I will not do that. Here's what I've been doing since
+        graduating from Carleton College in 2021.
+        <br />
+        <br />
     </TextBody>
 </BaseLayout>
