--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,9 +1,10 @@
 ---
 ---
 
-<div class='flex flex-col md:flex-row lg:flex-row justify-between p-10 flex-wrap bg-green-200 text-2xl '>
-  <a href="/">Home</a>
-  <a href="/development_blog">Engineering</a>
-  <a href="/bressuire_blog/">Teaching</a>
-  <a href="/poitiers_blog/">Studying</a>
+<div class='flex flex-col md:flex-row lg:flex-row justify-between p-10 flex-wrap text-xl gap-5 '>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/">Home</a>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/development_blog">Engineering</a>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/development_blog">Books</a>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/bressuire_blog/">Teaching in Bressuire</a>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/poitiers_blog/">Studying in Poitiers</a>
 </div>
