--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -5,9 +5,9 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <div class="flex flex-col justify-center align-center text-center">
+  <div class="flex flex-col justify-center align-center text-center p-5 text-xl gap-20 mb-20">
     <p>{frontmatter.pubDate.slice(0, 10)}</p>
-    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    <img class='object-center m-auto' src={frontmatter.image.url} alt={frontmatter.image.alt} />
   </div>
   <TextBody>
     <slot />
