--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,15 +5,16 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 <BaseLayout pageTitle="Hello there!">
     <TextBody>
-        I'm Will Gleason, a full-stack developer in charge of two sites: the Gallica
-        Grapher, a digital humanities tool, and the Battle Point Pickleball
-        Monitor, a weather and court monitoring page for my local club.
+        I'm Will Gleason, a full-stack developer building a digital humanities
+        tool, <a target="_blank" class="underline text-blue-600 hover:text-blue-800 hover:cursor visited:text-purple-600" href="https://d32d5ops9ui5td.cloudfront.net/">the Gallica Grapher</a
+        >. I'm currently migrating the project from CRA to Next.js and
+        Typescript. 
         <br />
         <br />
-        I currently write my APIs in Python or Go, my user interfaces in React and
+        I like to write my APIs in Python or Go, my user interfaces in React and
         Typescript. I persist my data with Postgres. I have tried GraphQL for API
         data validation, but I think it's excessive for my current needs. I have
-        started using either tRPC or Python's marvelous FastAPI. For static projects,
+        just started experimenting with tRPC and Python's marvelous FastAPI. For static projects,
         such as this website, Astro.js is my favorite tool.
         <br />
         <br />
