--- a/src/components/PostNavigator.astro
+++ b/src/components/PostNavigator.astro
@@ -7,16 +7,18 @@ interface Props {
 const { posts } = Astro.props;
 ---
 
-{
-  posts.map((post) => (
-    <uL class="border m-2">
-      <li>
-        <a class='flex flex-col p-5' href={post.url}>
+<div class='mt-20 flex flex-col gap-10'>
+  {
+    posts.map((post) => (
+      <uL class="border m-2">
+        <li>
+          <a class="flex flex-col p-5" href={post.url}>
             {" "}
             <span>{post.frontmatter.title}</span>
             <span>{post.frontmatter.pubDate.slice(0, 10)}</span>
-        </a>
-      </li>
-    </uL>
-  ))
-}
+          </a>
+        </li>
+      </uL>
+    ))
+  }
+</div>
