adding spaces, social styling

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,5 +3,8 @@ import Social from "./Social.astro";
 ---
 
 <footer>
-  <Social platform="github" username="gleasonw" />
+  <div class="flex justify-center align-center gap-20 mt-20 mb-20">
+    <Social platform="github" username="gleasonw" />
+    <Social platform='linkedin' username='in/will-gleason' />
+  </div>
 </footer>
