--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 <BaseLayout pageTitle="Hello there!">
     <TextBody>
-        I'm Will Gleason, a full-stack developer building a digital humanities
+        I'm Will Gleason, a humanities major turned full-stack developer building a digital humanities
         tool, <a target="_blank" class="underline text-blue-600 hover:text-blue-800 hover:cursor visited:text-purple-600" href="https://d32d5ops9ui5td.cloudfront.net/">the Gallica Grapher</a
         >. I'm currently migrating the project from CRA to Next.js and
         Typescript. 
