--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -5,11 +5,17 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <div class="flex flex-col justify-center align-center text-center p-5 text-xl gap-20 mb-20">
+  <div
+    class="flex flex-col justify-center align-center text-center p-5 text-xl gap-20 mb-20"
+  >
     <p>{frontmatter.pubDate.slice(0, 10)}</p>
-    <img class='object-center m-auto' src={frontmatter.image.url} alt={frontmatter.image.alt} />
+    <img
+      class="object-center m-auto"
+      src={frontmatter.image.url}
+      alt={frontmatter.image.alt}
+    />
   </div>
-  <TextBody>
+  <article class="text-justify m-auto prose prose-sm sm:prose lg:prose-lg xl:prose-2xl">
     <slot />
-  </TextBody>
+  </article>
 </BaseLayout>
