--- a/src/pages/bressuire_blog.astro
+++ b/src/pages/bressuire_blog.astro
@@ -5,7 +5,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 const allPosts = await Astro.glob("../pages/posts/bressuire/*.md");
 ---
 
-<BaseLayout pageTitle={"Will's writs from Bressuire"}>
+<BaseLayout pageTitle={"Will's Writs from Bressuire"}>
   <TextBody>
     Herein lie a few posts from my time helping the French learn English in
     Bressuire, France.
