--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,9 +12,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         <br />
         <br />
         I like to write my APIs in Python or Go, my user interfaces in React and
-        Typescript. I persist my data with Postgres. I have tried GraphQL for API
-        data validation, but I think it's excessive for my current needs. I have
-        just started experimenting with tRPC and Python's marvelous FastAPI. For static projects,
+        Typescript. I use Postgres to persist my data. I have tried GraphQL for API
+        data validation, but I think it's excessive for my current needs. Instead, I have
+        started experimenting with tRPC and Python's marvelous FastAPI. For static projects,
         such as this website, Astro.js is my favorite tool.
         <br />
         <br />
@@ -23,5 +23,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         graduating from Carleton College in 2021.
         <br />
         <br />
+        <article>
+
+        </article>
     </TextBody>
 </BaseLayout>
