--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,9 +24,20 @@ import TimeStamp from "../components/TimeStamp.astro";
         Astro.js is my favorite tool.
         <br />
         <br />
-        One developer, whom I appreciate, lists only an apple cider recipe on their
-        website. Because I need a job, I will not do that. One day, perhaps. 
+        One developer, whom I appreciate, lists only their favorite apple cider recipe
+        on their website. Because I need a job, I will not do that. One day, perhaps.
+        Instead,
         <br />
         <br />
+        I suspect there won't be many more times in my life when a group of experts
+        will expect both high quality French prose and max-flow min-cut algorithms.
+        Carleton was wonderful. My senior thesis on the 19th century French press,
+        colonization in the Congo, and West African hunting traditions won distinction
+        in the French major. It was a wild, multi-disciplinary adventure. I love
+        cultural studies. My research depended on digitized newspapers from the French
+        National Archive. A marvelous resource, but difficult to access, and harder
+        to visualize. I was able to scrape together a graphing tool using Python
+        and R -- it could plot the usage of terms over time. Fascinating, but difficult
+        to read, and still inaccessible. Looks impressive, though!
     </article>
 </BaseLayout>
