--- a/src/pages/poitiers_blog.astro
+++ b/src/pages/poitiers_blog.astro
@@ -7,7 +7,7 @@ const allPosts = await Astro.glob('../pages/posts/poitiers/*.md');
 
 <BaseLayout pageTitle={"Will Goes to Poiters"}>
   <TextBody>
-    A few reports from time spent studying databases and the court of Louis XIV at the University of Poitiers, France. My writing has become less zany since these heady days.
+    A few reports from time spent studying databases and the court of Louis XIV at the University of Poitiers, France. My writing has become less eccentric since these heady days.
     <PostNavigator posts={allPosts} />
   </TextBody>
 </BaseLayout>
