--- a/src/components/TimeStamp.astro
+++ b/src/components/TimeStamp.astro
@@ -3,15 +3,16 @@ interface Props {
     date: string;
     title: string;
     commit: string;
+    url: string;
 }
-const { date, title, commit } = Astro.props;
+const { date, title, commit, url } = Astro.props;
 ---
 
 <div class="border m-10 p-10">
     <p class="m-0">{date}</p>
     <h2 class="m-0">{title}</h2>
     <a
-        href="https://github.com/gleasonw/gallica-grapher/commit/360b762a9989d826e76ae17214be1aef6bac44e6"
+        href={url}
         target='_blank'
         >"{commit}"</a
     >
