--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -5,7 +5,7 @@ const { frontmatter } = Astro.props;
 
 <BaseLayout pageTitle={frontmatter.title}>
   <div
-    class="flex flex-col justify-center align-center text-center p-5 text-xl gap-20 mb-20"
+    class="flex flex-col justify-center align-center text-center p-5 text-xl gap-20"
   >
     <p>{frontmatter.pubDate.slice(0, 10)}</p>
     <img
