--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import TimeStamp from "../components/TimeStamp.astro";
     <article
         class="text-justify m-auto prose prose-lg p-2 lg:prose-lg xl:prose-2xl"
     >
-        I'm Will, a French history major turned full-stack developer. I maintain
+        I'm Will Gleason, a French history major turned full-stack developer. I maintain
         a digital humanities tool, <a
             target="_blank"
             href="https://d32d5ops9ui5td.cloudfront.net/">the Gallica Grapher</a
