--- a/src/pages/development_blog.astro
+++ b/src/pages/development_blog.astro
@@ -7,7 +7,8 @@ const allPosts = await Astro.glob("../pages/posts/engineering/*.md");
 
 <BaseLayout pageTitle={"News from the Workshop"}>
     <TextBody>
-        A few reports as I stumble my way across a vast technical landscape.
+        Man stumbles his way through a vast technical landscape. I  will
+        try to update this every Saturday.
         <PostNavigator posts={allPosts} />
     </TextBody>
 </BaseLayout>
