--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ const { pageTitle } = Astro.props;
   </head>
   <body>
     <Navigation />
-    <div class='flex flex-col gap-20'>
+    <div class='flex flex-col gap-20 mt-10'>
       <h1 class="p-5 text-4xl text-center">{pageTitle}</h1>
       <slot />
     </div>
