--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,9 +17,8 @@ import TimeStamp from "../components/TimeStamp.astro";
         <br />
         <br />
         I like to write my APIs in Python or Go, my user interfaces in React and
-        Typescript. I use Postgres to persist my data. I have tried GraphQL for API
-        data validation, but I think it's excessive for my needs. Instead, I have
-        started experimenting with tRPC and Python's marvelous FastAPI. Tailwind
+        Typescript. I've been using Postgres to persist my data. I have tried GraphQL for API
+        data validation, but I think it's excessive for my needs. Instead, I'm experimenting with tRPC and Python's marvelous FastAPI. Tailwind
         is my css framework of choice. For static projects, such as this website,
         Astro.js is my favorite tool.
         <br />
