--- a/src/components/TimeStamp.astro
+++ b/src/components/TimeStamp.astro
@@ -3,6 +3,7 @@ interface Props {
     date: string;
     title: string;
     commit: string;
+    url: string;
 }
 const { date, title, commit } = Astro.props;
 ---
