--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,16 @@ import TimeStamp from "../components/TimeStamp.astro";
         <br />
         <br />
         One developer, whom I appreciate, lists only an apple cider recipe on their
-        website. Because I need a job, I will not do that. One day, perhaps. 
+        website. Because I need a job, I will not do that. One day, perhaps. For now, I code. 
         <br />
         <br />
+        The story so far...
+        <br />
+        <br />
+        <TimeStamp
+            date="June 2021"
+            title="Graduated from Carleton College"
+            commit="works pretty well"
+            url="https://github.com/gleasonw/gallica-grapher/commit/360b762a9989d826e76ae17214be1aef6bac44e6"
     </article>
 </BaseLayout>
