second eng post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,6 @@ import Footer from "../components/Footer.astro";
             url="https://github.com/gleasonw/gallica-grapher/commit/360b762a9989d826e76ae17214be1aef6bac44e6"
         >
             <ul>
-                <li>I graduated from Carleton with distinction in my major.</li>
                 <li>
                     My senior thesis, on 19th century French media, African
                     colonization, and a Senegalese man named Malamine Camara,
@@ -74,8 +73,8 @@ import Footer from "../components/Footer.astro";
             <ul>
                 <li>
                     I taught English to middle schoolers and high schoolers. In
-                    my spare time, I developed the Python code that would become
-                    the backend of the Gallica Grapher.
+                    my spare time, I developed the Python backend of the Gallica
+                    Grapher.
                 </li>
                 <li>
                     Adventures in multithreading ensued. The Gallica API limited
@@ -89,7 +88,7 @@ import Footer from "../components/Footer.astro";
                 <li>
                     The stub of a website was taking shape. I was working with
                     JQuery, though, and state management was difficult. Progress
-                    on the UI was slow, but I managed to get a search bar
+                    on the UI was slow -- I did manage to get a search bar
                     working for the 14,000 periodicals Gallica has archived.
                 </li>
             </ul>
@@ -109,10 +108,11 @@ import Footer from "../components/Footer.astro";
                     data transformations.
                 </li>
                 <li>
-                    I experimented with Numpy and Pandas, but they didn't click
-                    for me like SQL does. I decided to run all of my
-                    transformations in Postgres. Average window and smoothing
-                    were straightforward to implement.
+                    I experimented with Numpy and Pandas, but they felt like
+                    unfamiliar versions of SQL. Since my transformations weren't
+                    complicated, I decided to transform everything in Postgres.
+                    Average window and smoothing were straightforward to
+                    implement.
                 </li>
                 <li>
                     Without ggplot, I needed a graphing library. I tried Plotly
@@ -142,10 +142,10 @@ import Footer from "../components/Footer.astro";
                     state hooks. It was a thrilling moment when I realized I
                     could change state and the UI would update for me. I began
                     to experiment more freely, knowing that I wouldn't have to
-                    spend hours wrangling DOM selectors with every new change.
+                    spend an hour wrangling DOM selectors with every significant
+                    change.
                 </li>
             </ul>
         </TimeStamp>
-
     </article>
 </BaseLayout>
