--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,6 +17,7 @@ const { pageTitle } = Astro.props;
     <Navigation />
     <div class='flex flex-col mt-10'>
       <h1 class="p-5 text-4xl text-center">{pageTitle}</h1>
+      <div class='p-5'></div>
       <slot />
     </div>
     <Footer />
