--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import TimeStamp from "../components/TimeStamp.astro";
 import Footer from "../components/Footer.astro";
+import { inject } from "@vercel/analytics";
+inject();
 ---
 
 <BaseLayout pageTitle="Will Gleason">
