--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,27 @@ const { pageTitle } = Astro.props;
 ---
 
 <html lang="en">
+  <script defer src="/_vercel/insights/script.js"></script>
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      type="text/partytown"
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-5GR8EYZ40F"
+    ></script>
+    <script>
+      //@ts-ignore
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        //@ts-ignore
+        dataLayer.push(arguments);
+      }
+      //@ts-ignore
+      gtag("js", new Date());
+      //@ts-ignore
+      gtag("config", "G-5GR8EYZ40F");
+    </script>
+
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
@@ -15,9 +35,9 @@ const { pageTitle } = Astro.props;
   </head>
   <body>
     <Navigation />
-    <div class='flex flex-col mt-10'>
+    <div class="flex flex-col mt-10">
       <h1 class="p-5 text-4xl text-center">{pageTitle}</h1>
-      <div class='p-5'></div>
+      <div class="p-5"></div>
       <slot />
     </div>
     <Footer />
