--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,17 +10,21 @@ import Footer from "../components/Footer.astro";
     class="text-justify m-auto prose prose-lg p-2 lg:prose-lg xl:prose-2xl"
   >
     I'm a French history major turned full-stack developer. I maintain a digital
-    humanities tool, <a
+    humanities tool, the <a
       target="_blank"
-      href="https://d32d5ops9ui5td.cloudfront.net/">the Gallica Grapher</a
+      href="https://d32d5ops9ui5td.cloudfront.net/">Gallica Grapher</a
     >. I'm currently migrating the project from CRA to Next.js and Typescript.
     <br />
     <br />
-    I like to write my APIs in Python or Go, my user interfaces in React and Typescript.
-    I've been using Postgres to persist my data. I have tried GraphQL for API data
-    validation, but I think it's excessive for my needs. Instead, I'm experimenting
-    with tRPC and Python's marvelous FastAPI. Tailwind is my css framework of choice.
-    For static projects, such as this website, Astro.js is my favorite tool.
+    I like to write my APIs in <a
+      target="_blank"
+      href="https://github.com/gleasonw/gallica-grapher/blob/main/backend/main.py"
+      >Python</a
+    > or Go, my user interfaces in React and Typescript. I've been using Postgres
+    to persist my data. I have tried GraphQL for API data validation, but I think
+    it's excessive for my needs. Instead, I'm experimenting with tRPC and Python's
+    marvelous FastAPI. Tailwind is my css framework of choice. For static projects,
+    such as this website, Astro.js is my favorite tool.
     <br />
     <br />
     One developer, whom I appreciate, lists only an apple cider recipe on their website.
