--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,11 +20,14 @@ import Footer from "../components/Footer.astro";
       target="_blank"
       href="https://github.com/gleasonw/gallica-grapher/blob/main/backend/main.py"
       >Python</a
-    > or Go, my user interfaces in React and Typescript. I've been using Postgres
-    to persist my data. I have tried GraphQL for API data validation, but I think
-    it's excessive for my needs. Instead, I'm experimenting with tRPC and Python's
-    marvelous FastAPI. Tailwind is my css framework of choice. For static projects,
-    such as this website, Astro.js is my favorite tool.
+    > or <a
+      target="_blank"
+      href="https://github.com/gleasonw/goNWSproxy/blob/master/api.go">Go</a
+    >, my user interfaces in React and Typescript. I've been using Postgres to
+    persist my data. I have tried GraphQL for API data validation, but I think
+    it's excessive for my needs. Instead, I'm experimenting with tRPC and
+    Python's marvelous FastAPI. Tailwind is my css framework of choice. For
+    static projects, such as this website, Astro.js is my favorite tool.
     <br />
     <br />
     One developer, whom I appreciate, lists only an apple cider recipe on their website.
