--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,10 @@ import Footer from "../components/Footer.astro";
   <article
     class="text-justify m-auto prose prose-lg p-2 lg:prose-lg xl:prose-2xl"
   >
-    I'm a French history major turned full-stack developer. I maintain a tool that graphs word occurrences in 19th century French newspapers, the <a
+    I'm a French history major turned full-stack developer. I maintain the <a
       target="_blank"
       href="https://d32d5ops9ui5td.cloudfront.net/">Gallica Grapher</a
-    >. I'm currently migrating the project from CRA to Next.js and Typescript.
+    >, a tool that plots word occurrences in 19th century French newspapers. I'm currently migrating the app from CRA to Next.js and Typescript.
     <br />
     <br />
     I like to write my APIs in <a
