no more studying the blade

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -146,7 +146,7 @@ import Footer from "../components/Footer.astro";
     </TimeStamp>
     <TimeStamp
       date="June 2022"
-      title="Studying the Blade"
+      title="Unit tests; the craft"
       commit="tests on a plane"
       url="https://github.com/gleasonw/gallica-grapher/commit/3b47ddf35483bc631790cb54cdfaa1639733c063"
       >
