--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -152,13 +152,13 @@ import Footer from "../components/Footer.astro";
       >
       <ul>
         <li>
-          The app was working, in full interactive glory. Questions answered, left and right, never again would
+          The app was working, in full interactive glory. Questions answered, left and right; never again would
           humanity be unaware of how many times "vin" appeared in the 1894 editions of the 
           Poitou medical journal. 12, at least once in every edition. 
         </li>
         <li>
           Wanting to be professional, I decided to implement a testing suite, which I had been reading about.
-          I began testing zealously, thoroughly. Every function and class. It was a useful experience, but pointless,
+          I began testing zealously, thoroughly. Every function and class. It was a useful experience, but needlessly effortful,
           as I now realize. My tests broke for silly reasons (typos, imports) whenever I changed something. Fragile tests!
           I place my tests wisely now, at higher levels of abstraction.
         </li>
