--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from "../components/Footer.astro";
   >
     I'm a French history major turned full-stack developer. I maintain the <a
       target="_blank"
-      href="https://d32d5ops9ui5td.cloudfront.net/">Gallica Grapher</a
+      href="https://www.gallicagrapher.com/">Gallica Grapher</a
     >, a tool that plots word occurrences in 19th-century French newspapers. I'm
     currently migrating the app from CRA to Next.js and Typescript.
     <br />
