--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import linkedin from '/linkedin.svg';
 ---
 
 <footer>
-  <div class="flex justify-center align-center gap-20 mt-20 mb-20">
+  <div class="flex justify-center align-center gap-20 m-20">
     <Social platform="github" username="gleasonw" svg={github}/>
     <Social platform='linkedin' username='in/will-gleason' svg={linkedin} />
   </div>
