--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Footer from "../components/Footer.astro";
       target="_blank"
       href="https://github.com/gleasonw/goNWSproxy/blob/main/api.go">Go</a
     >, my user interfaces in React and Typescript. I've been using Postgres to
-    persist my data. I have tried GraphQL for API data validation, but I think
+    persist my data, sometimes Redis for simple messaging. I have tried GraphQL for API data validation, but I think
     it's excessive for my needs. Instead, I'm experimenting with tRPC and
     Python's marvelous FastAPI. Tailwind is my css framework of choice. For
     static projects, such as this website, Astro.js is my favorite tool.
