no side margins, better mobile viewing

--- a/src/components/TimeStamp.astro
+++ b/src/components/TimeStamp.astro
@@ -8,7 +8,7 @@ interface Props {
 const { date, title, commit, url } = Astro.props;
 ---
 
-<div class="m-10 p-10">
+<div class="p-5 mb-10 mt-10">
     <p class="m-0">{date}</p>
     <h2 class="m-0">{title}</h2>
     <a
