--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Footer from "../components/Footer.astro";
   <article
     class="text-justify m-auto prose prose-lg p-4 lg:prose-lg xl:prose-2xl"
   >
-    I'm a French history major turned full-stack developer. I maintain the <a
+    I'm a 2021 graduate and French history major. I believe the humanities needs better software. I'm on the job market for full-stack developer roles. I maintain the <a
       target="_blank"
       href="https://www.gallicagrapher.com/">Gallica Grapher</a
     >, a tool that plots word occurrences in 19th-century French newspapers. I'm
