--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Footer from "../components/Footer.astro";
   <article
     class="text-justify m-auto prose prose-lg p-4 lg:prose-lg xl:prose-2xl"
   >
-    I'm a 2021 Carleton graduate, French history major. I believe the humanities need better software. In this spirit, I maintain the <a
+    I'm a 2021 Carleton College graduate and French history major. I believe the humanities need better software. In this spirit, I maintain the <a
       target="_blank"
       href="https://www.gallicagrapher.com/">Gallica Grapher</a
     >, a tool that plots word occurrences in 19th-century French newspapers. I'm
