--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import Footer from "../components/Footer.astro";
     persist my data, sometimes Redis for simple messaging. I have tried GraphQL for API data validation, but I think
     it's excessive for my needs. Instead, I'm experimenting with tRPC and
     Python's marvelous FastAPI. Tailwind is my css framework of choice. For
-    static projects, such as this website, Astro.js is my favorite tool.
+    static projects, such as this website, Astro.js has become my favorite tool.
     <br />
     <br />
     One developer, whom I appreciate, lists only an apple cider recipe on their website.
