--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const { pageTitle } = Astro.props;
 
   <body>
     <Navigation />
-    <div class="flex flex-col mt-10">
+    <div class="flex flex-col">
       <h1 class="p-5 text-4xl text-center">{pageTitle}</h1>
       <div class="p-5"></div>
       <slot />
