--- a/src/pages/development_blog.astro
+++ b/src/pages/development_blog.astro
@@ -7,8 +7,8 @@ const allPosts = await Astro.glob("../pages/posts/engineering/*.md");
 
 <BaseLayout pageTitle={"News from the Workshop"}>
     <TextBody>
-        Man stumbles his way across a vast technical landscape. I  will
-        try to update this every Saturday. 
+        During the job search, I have been working on integrating the French National Archives API into a modern React application. The goal is to improve UX for researchers.
+        I've recently started collaborating with the [Gallicagram](https://shiny.ens-paris-saclay.fr/app/gallicagram) team. 
         <PostNavigator posts={allPosts} />
     </TextBody>
 </BaseLayout>
