--- a/src/pages/development_blog.astro
+++ b/src/pages/development_blog.astro
@@ -8,7 +8,7 @@ const allPosts = await Astro.glob("../pages/posts/engineering/*.md");
 <BaseLayout pageTitle={"News from the Workshop"}>
     <TextBody>
         During the job search, I have been working on integrating the French National Archives API into a modern React application. The goal is to improve UX for researchers.
-        I've recently started collaborating with the [Gallicagram](https://shiny.ens-paris-saclay.fr/app/gallicagram) team. 
+        I recently started collaborating with the [Gallicagram](https://shiny.ens-paris-saclay.fr/app/gallicagram) team. 
         <PostNavigator posts={allPosts} />
     </TextBody>
 </BaseLayout>
