--- a/src/pages/development_blog.astro
+++ b/src/pages/development_blog.astro
@@ -6,9 +6,21 @@ const allPosts = await Astro.glob("../pages/posts/engineering/*.md");
 ---
 
 <BaseLayout pageTitle={"News from the Workshop"}>
-    <TextBody>
-        During the job search, I have been integrating the French National Archives API into a modern React application. The goal is to improve UX for researchers.
-        I have recently started collaborating with the <a class="underline" href="https://shiny.ens-paris-saclay.fr/app/gallicagram">Gallicagram</a> team. 
-        <PostNavigator posts={allPosts} />
-    </TextBody>
+  <TextBody>
+    <p>
+      I have been integrating the French National Archives API into a modern
+      React application. The goal is to improve UX for researchers. The backbone
+      of the React App is a <a
+        href="https://gallica-grapher-production.up.railway.app/docs#/default/fetch_records_from_gallica_api_gallicaRecords_get"
+        class="underline"
+        target="_blank">JSON Rest API</a
+      > that wraps a couple of Gallica XML endpoints.
+    </p>
+    <br />
+    <p>
+      As of 2/26/2023, the Gallica Grapher is in a stable state, and I won't be
+      updating this blog as frequently.
+    </p>
+    <PostNavigator posts={allPosts} />
+  </TextBody>
 </BaseLayout>
