change API link

--- a/src/pages/development_blog.astro
+++ b/src/pages/development_blog.astro
@@ -11,7 +11,7 @@ const allPosts = await Astro.glob("../pages/posts/engineering/*.md");
       I have been integrating the French National Archives API into a modern
       React application. The goal is to improve UX for researchers. The backbone
       of the React App is a <a
-        href="https://gallica-grapher-production.up.railway.app/docs#/default/fetch_records_from_gallica_api_gallicaRecords_get"
+        href="https://github.com/gleasonw/gallica-getter"
         class="underline"
         target="_blank">JSON Rest API</a
       > that wraps a couple of Gallica XML endpoints.
