--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,14 +6,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   <article
     class="prose prose-lg m-auto p-4 text-justify lg:prose-lg xl:prose-2xl"
   >
-    I'm a 2021 Carleton College graduate and French history major. I believe the
-    humanities need better software. In this spirit, I maintain the <a
+    I'm a developer, 2021 Carleton College graduate, and French history major. I code in the hopes of making public data more accesible. I currently work in Lyon, France as a frontend developer. On the side, I maintain the <a
       target="_blank"
       href="https://www.gallicagrapher.com/">Gallica Grapher</a
-    >, a tool that plots word occurrences in 19th-century French newspapers. I
-    just finished migrating the app from CRA to Next.js and Typescript. I'm now
-    tidying up my server-side Gallica API wrappers for a wider audience. You can
-    track my travails in my <a href="/development_blog">engineering blog</a>.
+    >, a tool that plots word occurrences in 19th-century French newspapers. I also maintain a <a target="_blank" href="https://nl-joke-val.vercel.app">Twitch dashboard</a> that tracks emotes and +2 counts for streamer Northernlion.
     <br />
     <br />
     I like to write my APIs in <a
