--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,8 +1,9 @@
 ---
 ---
 
-<div class='flex flex-col md:flex-row lg:flex-row justify-between p-10 flex-wrap text-xl'>
+<div class='flex flex-col md:flex-row lg:flex-row justify-between gap-5 p-10 flex-wrap text-xl'>
   <a class='border-4 border-red- hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/">Home</a>
+  <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/lyon_blog/">Working in Lyon</a>
   <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/development_blog">Engineering</a>
   <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/bressuire_blog/">Teaching in Bressuire</a>
   <a class='border-4 hover:bg-zinc-400 transition duration-150 hover:ease-in p-3' href="/poitiers_blog/">Studying in Poitiers</a>
